src/App.css
.header-color {
  background: #667db6;  /* fallback for old browsers */
  background: -webkit-linear-gradient(to bottom, #667db6, #0082c8, #0082c8, #667db6);  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to bottom, #667db6, #0082c8, #0082c8, #667db6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.landing-grid {
  background: #667db6;  /* fallback for old browsers */
  background: -webkit-linear-gradient(to bottom, #667db6, #0082c8, #0082c8, #667db6);  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to bottom, #667db6, #0082c8, #0082c8, #667db6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: center;
  display: flex;
  overflow-y: scroll;
  overflow-x: hidden;
  padding-bottom: 100px;
}

.category-tabs {
  background: #667db6;  /* fallback for old browsers */
  background: -webkit-linear-gradient(to bottom, #667db6, #0082c8, #0082c8, #667db6);  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to bottom, #667db6, #0082c8, #0082c8, #667db6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: center;
  overflow-y: scroll;
  overflow-x: hidden;
  padding-top: 50px;
}

/* Contacts Page Styling */

.contact-body{
  background: #667db6;  /* fallback for old browsers */
  background: -webkit-linear-gradient(to bottom, #667db6, #0082c8, #0082c8, #667db6);  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to bottom, #667db6, #0082c8, #0082c8, #667db6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  margin: auto;
  position: fixed;
  width: 100%;
  height: 100%;
  justify-content: center;
  padding-top: 2em;
  overflow-y: scroll;
  overflow-x: hidden;
}

.contact-grid {
  text-align: center;
  justify-content: center;
  width: 80%;
  height: 100%;
  color: black;
  margin-bottom: 20px;
}

.contact-grid h2 {
  font-family: 'Anton', sans-serif;
}

.contact-grid hr {
  border-top: 5px dotted black;
  width: 50%;
  margin: auto;
}

.contact-grid p {
  font-family: 'Oxygen', sans-serif;
  font-weight: bold;
}

.contact-list i{
  font-size: 50px;
  padding-right: 5rem;
}

.contact-list a{
  color: black;
}

/* Contacts Page Styling */

.avatar-img {
  padding-top: 2cm;
  height: 300px;
  width: auto;
}

.banner-text{
  background-color: black;
  opacity: 0.8;
  width: 75%;
  margin: auto;
  border-radius: 10px;
}

.category-tabs h1{
  color:black;
}

.banner-text h1 {
  font-size: 66px;
  font-weight: bold;
  color: white;
}

.banner-text hr {
  border-top: 5px dotted white;
  width: 50%;
  margin: auto;
}
.banner-text p {
  color: white;
  font-size: 20px;
  padding: 1cm;
}

.social-links {
  display: flex;
  justify-content: center;
  width: 50%;
  margin: auto;

}

.social-links i {
  color: white;
  font-size: 5em;
  padding: 12px;
}

.projects-grid {
  display: flex;
  text-align: left;
}

@media only screen and (max-width: 1024px){
  .projects-grid {
    flex-direction: column;
  }
}

